# docuflow

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.sqlx/: query-007ef68719f09e4978b49fc575f5077196593952daa40a55303231f73c317acf.json  query-039c1ac7bb1f84d2868d2bf9997a6a88e2cc5697833b4d1bb36cdc40901c7c47.json  query-03f89fa9eaaeb9489e4c99f0045fe22dbfdf823a298a0d5bb27222ad8bfd91aa.json  query-09440a8e56f163c87516c0e2db1e61cd79d47f1a212b105b2272f5d0dea3dd34.json  query-096923af14b25c58632da4456ef154eecdb2c74ce92190efbdbe9830242a637a.json  query-0cb26ef88d1e772af56b19d3239328104da99e32c83d2e38c06e0aec402080b0.json  query-0cb7c975d5b1c7ccc5640228375adb0c448c8bf81fb01a3b78ef2f9f4c87c589.json  query-0ee09249b9229bec2fab2a5c47fe0aec692e9df715c56da8f922608fb304dbd6.json  query-0fc2f558a1a7ec423d2ff57bf2e2804f63ded393fafdcc3df79992119984b360.json  query-11546857e810a45961639977502851bcbd8731703251d0387d6384fd3268dda9.json  query-14e7fa790e013d23d1050178b30a1663f80e26e6c95a2e1f04760dc26b3bb16b.json  query-16730b726b0d31e5b99835f1997ff7bbc7322938a5591b383cfff4c8a56dd6d6.json  query-168d84c5aad7b7f0cc6172f7af0cbc075717b9cd0c617a4d225a42340f2e5441.json  query-17633150163fb4789987d3553093b74c2828d6fac0e66eb927858ce330e0edcb.json  query-181fed0ac17b075b3417fb24e8b19609ae2177608ab62ee260389fa90b406a42.json  query-19330edf46d11dfb5c9c5bf88206de5df355429d2c1aead2b324f72f681927da.json  query-19ab3180ace15f7e6080af7bb1d66f6e34c5068455bcff006e8fdde88a8731fb.json  query-19c3a5fbad3474adfd1a7bc6d1f331b29992288a7533c7d311f50b4e3358b3ce.json  query-1af9f877b56afb2cb8f88d2b968f9c11484921e496de6bfbc0b6072138d54a7d.json  query-1c16479867971efdcac74f60d0747f0b315b28e2102a305d0899850c22ca55ba.json  query-1d17c241a706c201964290f0660e61e3f0cd6fcb28c1847b785a1f107ebcb4fc.json  query-1d424cdd4be48ed7d58b15223a3fc3881e57ec984001807f71075656ecbafb21.json  query-1e3562e740ce3bae3187e559d5fd1cf95f5842ae7619d30b947eb1738946e5ba.json  query-1f6d89aa2eb297c69ff3e59b84d25e73a00c756ef7c836d6212ddd7996bf4e91.json  query-1fab5d323aaa2dc224efecaf2cfbd076b85cd0afd78ab53286734df7e3d4695d.json  query-21e78d516551c010f9f421862b9c2c45ad2b3b09c47831b375da861d997e3b5d.json  query-225d774935974b5cb983b67e9ef805f5691a700cf1154982ee7981132166099a.json  query-22ffd6bb0b156a05e374d701b87de7a2d4d993c77dfd20f7bb81c36da717d9b0.json  query-25ccdd78b840ac33f7957e9efc7dfa7ed0f4233770d59f32296a1a75848657da.json  query-25ed11bde2a6766724ade2edea923c7c66f25dfd787f710b01f8ce78b49196d8.json  query-2a142e68d695862d8d48dc0e921db41aeb06927b34ddcc493fae43281b4cfa6c.json  query-2b2d89e7a31648f54308cc43834c9680d483da70370cf259f022e5ee42bb915e.json  query-2f7c0b21d285aca4aaf18eea22cda44f606793f65c448d3b4bd71834148ed380.json  query-305e56bfa7fd819c85a742e6f61ab409a2b36bee81edd99081989a9f6dfd377b.json  query-31339096b19c794311096d665665b8e8592d9900d307d13c450a23cb83401d1f.json  query-32017bdf1b02808890dc486baa1a04cfe883d3d956d73284d903b3eb3b4185ac.json  query-32c6bff9661a0e90d704cf7a70de0c12fbdda7b302550f67e4bfe56d42c794a5.json  query-34f73ac8417b0aca0b45bb5d929bc4249aa1a4e196902f237dece3a5d442eb32.json  query-36923723c92a30c20a6658d8ce44798282b2d0aa9152e00c977933a2e5d9b954.json  query-36fcaadc193826bf798e8643daf7ee9b7f5b0f851f78795e4325c1cbcd3751e1.json  (+142 more)
deploy/: .env.example  docker-compose.yml
docs/: ARCHITECTURE.md
migrations/: 20260711120001_create_tenants.sql  20260711120002_create_users.sql  20260711181238_add_user_profile_fields.sql  20260711184938_create_password_reset_tokens.sql  20260712113705_create_documents.sql  20260712133000_add_documents_ocr_processing_index.sql  20260712141045_create_scan_sessions.sql  20260712212548_add_documents_ocr_suggested_date_issued.sql  20260713152729_add_documents_language.sql  20260713162422_create_smart_collections.sql  20260713205400_generalize_documents_language.sql  20260715190500_create_scan_pages.sql  20260716130531_add_documents_ocr_search_vector.sql  20260716150350_add_documents_doc_type.sql  20260716152636_add_documents_thumbnail_status.sql  20260717111726_add_documents_content_hash.sql  20260717124553_add_documents_date_expires.sql  20260719140000_add_documents_amount.sql
src/: amount_extract.rs  blob.rs  content_hash.rs  date_extract.rs  doc_type_extract.rs  domain.rs  error.rs  exif_extract.rs  expiry_extract.rs  highlight.rs  language_detect.rs  languages.rs  lib.rs  mailer.rs  main.rs  ocr.rs  pdf_assemble.rs  telemetry.rs  thumbnail.rs
static/: style.css
templates/: _credentials_fields.html  base.html  coming_soon.html  document_bulk_delete_confirm.html  document_delete.html  document_new.html  document_show.html  documents_list.html  forgot_password.html  landing.html  login.html  (+8 more)
(+121 files in other folders)
