[package]
name = "docuflow"
version = "0.1.0"
edition = "2024"

[dependencies]
# Вебсервер та асинхронність
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }

# База даних та сховище блобів (S3)
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
aws-config = "1.0"
aws-sdk-s3 = "1.0"

# Екосистема OpenTelemetry та Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] }
