[package]
name = "docuflow"
version = "0.1.0"
edition = "2024"

[dependencies]
# Вебсервер та асинхронність
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "set-header", "trace"] }
serde = { version = "1.0", features = ["derive"] }

# База даних та сховище блобів (S3)
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "time", "uuid"] }
time = "0.3"
aws-config = "1.0"
aws-sdk-s3 = "1.0"
aws-smithy-types = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }

# Автентифікація
argon2 = { version = "0.5", features = ["std"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
dotenvy = "0.15"
sha2 = "0.10"
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# Екосистема OpenTelemetry та Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] }

# Обробка помилок
thiserror = "1.0"
askama = "0.14"
askama_web = { version = "0.14", features = ["axum-0.7"] }
tower = { version = "0.5.3", features = ["util"] }

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = "1.0.150"
