[package]
name = "docuflow"
version = "0.1.0"
edition = "2024"

[dependencies]
# Вебсервер та асинхронність
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "set-header", "trace"] }
serde = { version = "1.0", features = ["derive"] }

# База даних та сховище блобів (S3)
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "time", "uuid"] }
time = "0.3"
aws-config = "1.0"
aws-sdk-s3 = "1.0"
aws-smithy-types = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }

# Автентифікація
argon2 = { version = "0.5", features = ["std"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
dotenvy = "0.15"
sha2 = "0.10"
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# Екосистема OpenTelemetry та Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] }

# Обробка помилок
thiserror = "1.0"
askama = "0.14"
askama_web = { version = "0.14", features = ["axum-0.7"] }
tower = { version = "0.5.3", features = ["util"] }

# Сканування камерою телефону (QR-код)
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }

# Розпізнавання дати видачі документа в OCR-тексті
regex = "1"

# Визначення мови документа за розпізнаним текстом
whatlang = "0.18.0"
axum-extra = { version = "0.9", features = ["query"] }
# Pinned to match the version axum-extra's own `Query` extractor resolves
# to, so a stored smart-collection query string parses identically here
# and there (see TDR 016 §3).
serde_html_form = "=0.2.8"

# Визначення дати зйомки документа з EXIF-метаданих зображення
kamadak-exif = "0.6.1"
isolang = { version = "2.4.0", features = ["list_languages"] }

# Збирання багатосторінкового сканування у єдиний PDF-документ (feature 022)
lopdf = "0.44.0"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }

[dev-dependencies]
http-body-util = "0.1.3"
lopdf = "0.44.0"
serde_json = "1.0.150"
